Removed german translations in wrong files

--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -84,10 +84,10 @@
     </string>
 
     <!-- Upgrade Teaser -->
-    <string name="upgrade_teaser_1">Du willst Backups?</string>
-    <string name="upgrade_teaser_2">Du willst Bildeinstellungen?</string>
-    <string name="upgrade_teaser_3">Du willst neue Features früher erhalten?</string>
-    <string name="upgrade_teaser_4">Du willst Verbesserungen früher erhalten?</string>
-    <string name="upgrade_teaser_5">Du willst keine Werbeeinblendungen mehr sehen?</string>
+    <string name="upgrade_teaser_1">Want backups?</string>
+    <string name="upgrade_teaser_2">Want style settings?</string>
+    <string name="upgrade_teaser_3">Want new features sooner?</string>
+    <string name="upgrade_teaser_4">Want improvements sooner?</string>
+    <string name="upgrade_teaser_5">Want to get rid of ads?</string>
 
 </resources>
