--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -65,7 +65,7 @@
     <string name="previous_image">Image précédente</string>
     <string name="save_image_file">Sauvegarder l\'image</string>
     <string name="saved_picture_as">Image sauvegardée comme %1$s.</string>
-    <string name="buy_upgrade">Upgrade</string>
+    <string name="settings">Paramètres</string>
     <string name="shrinking_plates">Plaques</string>
     <string name="store_images">
         Cela stocke les images à partir de votre liste de contacts dans le répertoire Micopi*
@@ -80,11 +80,45 @@
     <string name="styles">Styles</string>
     <string name="want_to_assign">Voulez-vous attribuer cette image à %1$s ?</string>
 
+    <!-- Welcome -->
+    <string name="button_reset_images">Reset Images</string>
+    <string name="button_buy_full">Buy the full version</string>
+
     <!-- Upgrade Teaser -->
     <string name="upgrade_teaser_1">Want backups?</string>
     <string name="upgrade_teaser_2">Want style settings?</string>
     <string name="upgrade_teaser_3">Want new features sooner?</string>
     <string name="upgrade_teaser_4">Want improvements sooner?</string>
     <string name="upgrade_teaser_5">Want to get rid of ads?</string>
+
+    <!-- Batch Mode -->
+    <string name="button_redo_micopi">Redo Micopi pictures</string>
+
+    <!-- Batch Mode - Dialogs -->
+    <string name="dialog_msg_redo_micopi">
+        This mode is only able to find Micopi images
+        that have been created with the current version of the app.
+        Older pictures will not be replaced.
+    </string>
+
+    <!-- Settings - Backup -->
+    <string name="button_delete_backup">
+        Delete Backup Folder
+    </string>
+    <string name="dialog_msg_delete_backup">
+        Please confirm that you would like to delete all image backups made by Micopi.
+    </string>
+
+    <!-- Image Reset -->
+    <string name="msg_reset">
+        Would you like to reset a single image or all contact images at once?
+    </string>
+    <string name="dialog_msg_reset_all_contacts">
+        Please confirm that you would like to reset ALL contact images.
+    </string>
+    <string name="dialog_check_delete">
+        Delete images that do not have a backup!
+    </string>
+
 
 </resources>
