--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -24,7 +24,7 @@
     </string>
     <string name="deep_search">Deep Search</string>
     <string name="enable_deep_search"></string>
-    <string name="buy_upgrade">Upgrade</string>
+    <string name="settings">Настройки</string>
     <string name="enable_backup">
         Включение резервного копирования существующего изображения контакта перед перезаписью.
     </string>
@@ -69,11 +69,9 @@
         \n\nЭТО ДЕЙСТВИЕ НЕ МОЖЕТ БЫТЬ ОТМЕНЕНО.
     </string>
 
-    <!-- Settings - Styles -->
-    <string name="styles">Стили</string>
-    <string name="shrinking_plates">Сжатие</string>
-    <string name="structured_discs">Structured Discs</string>
-    <string name="pixel_matrix">Pixel Matrix</string>
+    <!-- Welcome -->
+    <string name="button_reset_images">Reset Images</string>
+    <string name="button_buy_full">Buy the full version</string>
 
     <!-- Upgrade Teaser -->
     <string name="upgrade_teaser_1">Want backups?</string>
@@ -81,5 +79,40 @@
     <string name="upgrade_teaser_3">Want new features sooner?</string>
     <string name="upgrade_teaser_4">Want improvements sooner?</string>
     <string name="upgrade_teaser_5">Want to get rid of ads?</string>
+
+    <!-- Batch Mode -->
+    <string name="button_redo_micopi">Redo Micopi pictures</string>
+
+    <!-- Batch Mode - Dialogs -->
+    <string name="dialog_msg_redo_micopi">
+        This mode is only able to find Micopi images
+        that have been created with the current version of the app.
+        Older pictures will not be replaced.
+    </string>
+
+    <!-- Settings - Styles -->
+    <string name="styles">Стили</string>
+    <string name="shrinking_plates">Сжатие</string>
+    <string name="structured_discs">Structured Discs</string>
+    <string name="pixel_matrix">Pixel Matrix</string>
+
+    <!-- Settings - Backup -->
+    <string name="button_delete_backup">
+        Delete Backup Folder
+    </string>
+    <string name="dialog_msg_delete_backup">
+        Please confirm that you would like to delete all image backups made by Micopi.
+    </string>
+
+    <!-- Image Reset -->
+    <string name="msg_reset">
+        Would you like to reset a single image or all contact images at once?
+    </string>
+    <string name="dialog_msg_reset_all_contacts">
+        Please confirm that you would like to reset ALL contact images.
+    </string>
+    <string name="dialog_check_delete">
+        Delete images that do not have a backup!
+    </string>
 
 </resources>
