--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,8 +26,8 @@
     <!-- Upgrade Teaser -->
     <string name="upgrade_teaser_1">Want backups?</string>
     <string name="upgrade_teaser_2">Want style settings?</string>
-    <string name="upgrade_teaser_3">Want new features sooner?</string>
-    <string name="upgrade_teaser_4">Want improvements sooner?</string>
+    <string name="upgrade_teaser_3">Want new features earlier?</string>
+    <string name="upgrade_teaser_4">Want improvements earlier?</string>
     <string name="upgrade_teaser_5">Want to get rid of ads?</string>
 
     <!-- Single Contact -->
