--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,8 @@
 
 <resources>
 
-    <string name="app_name" translatable="false">Micopi+</string>
+    <string name="app_name" translatable="false">Micopi Pico
+    </string>
 
     <!-- Welcome -->
     <string name="pick_contact">Pick a single contact</string>
